--- a/index.html
+++ b/index.html
@@ -860,24 +860,51 @@
         <div class="label">プランをお選びください<span class="required">必須</span></div>
         <div class="visit-buttons">
             <button type="button" id="firstVisit" onclick="selectVisit(this)">お参り同行プラン 47000円+税</button>
-            <button type="button" id="repeatVisit" onclick="selectVisit(this)">スタジオお宮参りプラン 37000円+税</button>
-            <button type="button" id="repeatVisit" onclick="selectVisit(this)">お参り同行+スタジオ2シーン 67000円+税</button>
+            <button type="button" id="repeatVisit" onclick="selectVisit(this)">ミニプラン 　37,000円+税</button>
+            <button type="button" id="repeatVisit" onclick="selectVisit(this)">スタンダードプラン 　50,000円+税</button>
+            <button type="button" id="repeatVisit" onclick="selectVisit(this)">プレミアムプラン 　67,000円+税</button>
         </div>
 
-            <div class="label">祈祷されるお子様（お名前・月齢・性別）<span class="required">必須</span></div>
-            <textarea id="mugwortmainkid" placeholder="例：山田太郎・3ヶ月・男の子など 複数いれば全員分ご記入ください。"></textarea>
+        <div class="highlight-background">
+            <div class="kibounitizi">出産予定日 or 出産日<span class="required">必須</span></div>
+        </div>
 
-            <div class="label">付き添いご兄弟のお名前、年齢、性別をご記入ください（任意）</div>
-            <textarea id="mugwortsiblinginfo" placeholder="お名前・年齢・性別をご記入ください。"></textarea>
+        <!-- カスタム placeholder 表示用 -->
+        <div class="datetime-wrapper" style="text-align: center;">
+            <span class="placeholder" id="placeholder1">⇩タップして日時を入力⇩</span>
+            <input type="datetime-local" id="date4" class="datetime-input" placeholder=" " aria-label="タップして日時を入力">
+        </div>
+
+            <div class="label">自然分娩 or 帝王切開</div>
+            <div class="Freshflowerphotography-buttons">
+                <button type="button" onclick="selectFreshflowerphotography(this)">自然分娩</button>
+                <button type="button" onclick="selectFreshflowerphotography(this)">帝王切開</button>
+            </div>
+
+            <div class="label">お子様のお名前（任意）</div>
+            <textarea id="mugwortsiblinginfo" placeholder="お子様のお名前"></textarea>
+
+            <div class="label">お子様の性別<span class="required">必須</span></div>
+            <div class="Freshflowerphotography-buttons">
+                <button type="button" onclick="selectFreshflowerphotography(this)">男</button>
+                <button type="button" onclick="selectFreshflowerphotography(this)">女</button>
+                <button type="button" onclick="selectFreshflowerphotography(this)">わからない</button>
+            </div>
+
+            <div class="labelContent">ご兄弟情報<br>※いらっしゃらない場合は未記入で大丈夫です。（任意）</div>
+            <div class="info-text">ご兄弟のお名前</div>
+            <input type="tel" id="mugwortparticipants" placeholder="ご兄弟のお名前をご記入ください">
+            <div class="info-text">ご兄弟の性別</div>
+            <div class="Freshflowerphotography-buttons">
+                <button type="button" onclick="selectFreshflowerphotography(this)">男性</button>
+                <button type="button" onclick="selectFreshflowerphotography(this)">女性</button>
+                <button type="button" onclick="selectFreshflowerphotography(this)">相談したい</button>
+            </div>
+            <div class="info-text">ご兄弟の年齢</div>
+            <input type="tel" id="mugwortparticipants" placeholder="ご兄弟の年齢をご記入ください">
 
             <div class="label">撮影に参加される方の人数と続柄（任意）</div>
-            <input type="text" id="mugwortparticipants" placeholder="例：祖母2人、父、母 など">
-
-            <div class="label">同行撮影の方はお参りされる神社名（任意）</div>
-            <input type="text" id="mugwortshrinename" placeholder="神社名をご記入ください">
-
-            <div class="label">ご祈祷の予約時間（任意）</div>
-            <input type="time" id="mugwortreservationtime">
+            <input type="text" id="mugwortshrinename" placeholder="撮影に参加される方の人数と続柄をご記入ください">
 
             <div class="label">生花撮影ご希望の有無（スタジオのみ）（任意）</div>
             <div class="Freshflowerphotography-buttons">
@@ -886,36 +913,12 @@
                 <button type="button" onclick="selectFreshflowerphotography(this)">相談したい</button>
             </div>
 
-            <div class="label">お支度風景撮影ご希望の有無<span class="required">必須</span></div>
+            <div class="label">大人ヘアメイクご希望の有無<span class="required">必須</span></div>
             <div class="preparationphoto-buttons">
                 <button type="button" onclick="selectpreparationphoto(this)">有り</button>
                 <button type="button" onclick="selectpreparationphoto(this)">無し</button>
                 <button type="button" onclick="selectpreparationphoto(this)">相談したい</button>
             </div>
-
-            <div class="label">◎着物レンタル希望の有無<span class="required">必須</span></div>
-            <div class="kimono-buttons">
-                <button type="button" onclick="selectkimono(this)">有り</button>
-                <button type="button" onclick="selectkimono(this)">無し</button>
-                <button type="button" onclick="selectkimono(this)">相談したい</button>
-            </div>
-
-            <div class="labelContent" id="kimono-followup" style="display: none;">
-                <p>以下の内容をご準備またはお送りください：</p>
-                <ul>
-                    <li>お子様：衣装のスクリーンショット、安心パックの有無、靴のサイズ</li>
-                    <li>大人：衣装スクショ、洋服のサイズ、靴のサイズ、安心パックの有無、年代、好きな雰囲気</li>
-                </ul>
-            </div>
-
-            <div class="label">◎お支度ご希望の有無<span class="required">必須</span></div>
-            <div class="hairmakeup-buttons">
-                <button type="button" onclick="selecthairmakeup(this)">有り</button>
-                <button type="button" onclick="selecthairmakeup(this)">無し</button>
-                <button type="button" onclick="selecthairmakeup(this)">相談したい</button>
-            </div>
-
-
         
         <div class="highlight-background">
             <div class="kibounitizi">希望日時<span class="required">必須</span></div>
@@ -1504,11 +1507,11 @@ function selectpreparationphoto(element) {
         mugwortsiblinginfo: document.getElementById('mugwortsiblinginfo').value.trim(),
         mugwortparticipants: document.getElementById('mugwortparticipants').value.trim(),
         mugwortshrinename: document.getElementById('mugwortshrinename').value.trim(),
-        mugwortreservationtime: document.getElementById('mugwortreservationtime').value.trim(),
         visitCount, hairmakeupCount, kimonoCount, preparationphotoCount, FreshflowerphotographyCount,
                 dates: [
                     document.getElementById('date1').value,
                     document.getElementById('date2').value,
+                    document.getElementById('date4').value,
                     document.getElementById('date3').value
                 ],
         message: document.getElementById('message').value.trim()
@@ -1533,7 +1536,7 @@ function selectpreparationphoto(element) {
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前\n・${formData.name}\n\n電話番号\n・${formData.phone}\n\nプラン\n・${formData.visitCount}\n\n祈祷されるお子様\n・${formData.mugwortmainkid}\n\n付き添いご兄弟\n・${formData.mugwortsiblinginfo}\n\n撮影に参加される方\n・${formData.mugwortparticipants}\n\n同行撮影\n・${formData.mugwortshrinename}\n\nご祈祷の予約時間\n・${formData.mugwortreservationtime}\n\n生花撮影\n・${formData.FreshflowerphotographyCount}\n\nお支度風景\n・${formData.preparationphotoCount}\n\n着物レンタル\n・${formData.kimonoCount}\n\nお支度ご希望\n・${formData.hairmakeupCount}\n\n【希望日時】：\n・第一希望日\n${formatDate(formData.dates[0])}\n\n・第二希望日\n${formatDate(formData.dates[1])}\n\n・第三希望日\n${formatDate(formData.dates[2])}\n\nメッセージ：${formData.message}`
+                text: `【予約フォーム】\nお名前\n・${formData.name}\n\n電話番号\n・${formData.phone}\n\nプラン\n・${formData.visitCount}\n\n祈祷されるお子様\n・${formData.mugwortmainkid}\n\n付き添いご兄弟\n・${formData.mugwortsiblinginfo}\n\n撮影に参加される方\n・${formData.mugwortparticipants}\n\n同行撮影\n・${formData.mugwortshrinename}\n\n生花撮影\n・${formData.FreshflowerphotographyCount}\n\nお支度風景\n・${formData.preparationphotoCount}\n\n着物レンタル\n・${formData.kimonoCount}\n\nお支度ご希望\n・${formData.hairmakeupCount}\n\n【希望日時】：\n・第一希望日\n${formatDate(formData.dates[0])}\n\n・第二希望日\n${formatDate(formData.dates[1])}\n\n・第三希望日\n${formatDate(formData.dates[2])}\n\nメッセージ：${formData.message}`
             }]).then(() => {
                 alert('当日キャンセルは無いようにお願いいたします。');
                 liff.closeWindow();
