--- a/index.html
+++ b/index.html
@@ -852,7 +852,7 @@
     </div>
 
     <div class="container">
-        <h1>すずき写真事務所<br>お宮参り
+        <h1>すずき写真事務所<br>スタジオ ニューボーンフォト
         </h1>
         <div class="label">お客様名<span class="required">必須</span></div>
         <input type="text" id="name" placeholder="お名前を入力してください" oninput="saveInput('name')">
