--- a/index.html
+++ b/index.html
@@ -896,7 +896,7 @@
 
             <div class="labelContent">ご兄弟情報<br>※いらっしゃらない場合は未記入で大丈夫です。（任意）</div>
             <div class="info-text">ご兄弟のお名前</div>
-            <input type="text" id="mugwortparticipants" placeholder="ご兄弟のお名前をご記入ください">
+            <input type="text" id="mugwortmainkid" placeholder="ご兄弟のお名前をご記入ください">
             <div class="info-text">ご兄弟の性別</div>
             <div class="kimono-buttons">
                 <button type="button" onclick="selectkimono(this)">男性</button>
@@ -1551,7 +1551,7 @@ function selectpreparationphoto(element) {
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前\n・${formData.name}\n\n電話番号\n・${formData.phone}\n\nプラン\n・${formData.visitCount}\n\n出産予定日\n・${formatDate(formData.dates[3])}\n\n自然分娩 or 帝王切開\n・${formData.CaesareansectionCount}\n\nお子様のお名前\n・${formData.mugwortsiblinginfo}\n\nお子様の性別\n・${formData.FreshflowerphotographyCount}\n\nご兄弟のお名前\n・${formData.mugwortparticipants}\n\nご兄弟の性別\n・${formData.kimonoCount}\n\nご兄弟の年齢\n・${formData.mugwortparticipants}\n\n撮影に参加される方\n・${formData.mugwortshrinename}\n\n生花撮影\n・${formData.hairmakeupCount}\n\n大人ヘアメイク\n・${formData.preparationphotoCount}\n\n【希望日時】：\n・第一希望日\n${formatDate(formData.dates[0])}\n\n・第二希望日\n${formatDate(formData.dates[1])}\n\n・第三希望日\n${formatDate(formData.dates[2])}\n\nメッセージ：${formData.message}`
+                text: `【予約フォーム】\nお名前\n・${formData.name}\n\n電話番号\n・${formData.phone}\n\nプラン\n・${formData.visitCount}\n\n出産予定日\n・${formatDate(formData.dates[3])}\n\n自然分娩 or 帝王切開\n・${formData.CaesareansectionCount}\n\nお子様のお名前\n・${formData.mugwortsiblinginfo}\n\nお子様の性別\n・${formData.FreshflowerphotographyCount}\n\nご兄弟のお名前\n・${formData.mugwortmainkid}\n\nご兄弟の性別\n・${formData.kimonoCount}\n\nご兄弟の年齢\n・${formData.mugwortparticipants}\n\n撮影に参加される方\n・${formData.mugwortshrinename}\n\n生花撮影\n・${formData.hairmakeupCount}\n\n大人ヘアメイク\n・${formData.preparationphotoCount}\n\n【希望日時】：\n・第一希望日\n${formatDate(formData.dates[0])}\n\n・第二希望日\n${formatDate(formData.dates[1])}\n\n・第三希望日\n${formatDate(formData.dates[2])}\n\nメッセージ：${formData.message}`
             }]).then(() => {
                 alert('当日キャンセルは無いようにお願いいたします。');
                 liff.closeWindow();
