--- a/index.html
+++ b/index.html
@@ -185,7 +185,6 @@
         }
 
         .visit-buttons,
-        .Caesareansection-buttons,
         .hairmakeup-buttons,
         .kimono-buttons,
         .preparationphoto-buttons,
@@ -201,7 +200,6 @@
         }
 
         .visit-buttons button,
-        .Caesareansection-buttons button,
         .hairmakeup-buttons button,
         .kimono-buttons button,
         .preparationphoto-buttons button,
@@ -222,7 +220,6 @@
         }
 
         .visit-buttons button.active,
-        .Caesareansection-buttons button.active,
         .hairmakeup-buttons button.active,
         .kimono-buttons button.active,
         .preparationphoto-buttons button.active,
@@ -503,6 +500,62 @@
                 /* テキストの高さ調整 */
             }
         }
+
+        .info-text {
+            margin-top: 20px;
+            /* 上の余白 */
+            margin-bottom: 10px;
+            /* 下に白い隙間を追加 */
+            font-size: 13px;
+            color: #000000;
+            line-height: 1.5;
+            text-align: center;
+            word-wrap: break-word;
+            background-color: #eef9f5;
+            /* 青っぽい背景色を追加 */
+            padding: 10px;
+            border-radius: 4px;
+        }
+
+        /* 携帯端末向けのレスポンシブデザイン */
+        @media (max-width: 768px) {
+            .info-text {
+                font-size: 11.5px;
+                /* スマホでは少し小さく */
+                margin-top: 10px;
+                /* 上下のマージンを調整 */
+                line-height: 2.0;
+                /* テキストの高さ調整 */
+            }
+        }
+
+.info-textmemo { 
+    margin-top: 20px;
+    margin-bottom: 10px;
+    font-size: 13px;
+    color: #000000;
+    line-height: 1.5;
+    text-align: center;
+    word-wrap: break-word;
+    background-color: #eef9f5;
+    padding: 10px;
+    border-radius: 4px;
+
+    /* 横一杯に広げるための追加 */
+    width: 100%;
+    box-sizing: border-box; /* padding含めて100%に収まるように */
+    display: block;
+}
+
+/* 携帯端末向けのレスポンシブデザイン */
+@media (max-width: 768px) {
+    .info-textmemo {
+        font-size: 11.5px;
+        margin-top: 10px;
+        line-height: 2.0;
+    }
+}
+
 
         .symptoms,
         .options {
@@ -852,7 +905,7 @@
     </div>
 
     <div class="container">
-        <h1>すずき写真事務所<br>スタジオ ニューボーンフォト
+        <h1>すずき写真事務所<br>バースデー/アニバーサリー
         </h1>
         <div class="label">お客様名<span class="required">必須</span></div>
         <input type="text" id="name" placeholder="お名前を入力してください" oninput="saveInput('name')">
@@ -862,14 +915,25 @@
 
         <div class="label">プランをお選びください<span class="required">必須</span></div>
         <div class="visit-buttons">
-            <button type="button" id="firstVisit" onclick="selectVisit(this)">お参り同行プラン 47000円+税</button>
-            <button type="button" id="repeatVisit" onclick="selectVisit(this)">ミニプラン 　37,000円+税</button>
-            <button type="button" id="repeatVisit" onclick="selectVisit(this)">スタンダードプラン 　50,000円+税</button>
-            <button type="button" id="repeatVisit" onclick="selectVisit(this)">プレミアムプラン 　67,000円+税</button>
+            <button type="button" id="firstVisit" onclick="selectVisit(this)">ミニプラン　37,000円+税</button>
+            <button type="button" id="repeatVisit" onclick="selectVisit(this)">スタンダードプラン　47,000円+税</button>
+            <button type="button" id="repeatVisit" onclick="selectVisit(this)">プレミアムプラン　57,000円+税</button>
         </div>
 
+            <div class="label">撮影内容（任意）</div>
+            <div class="Freshflowerphotography-buttons">
+                <button type="button" onclick="selectFreshflowerphotography(this)">マタニティ</button>
+                <button type="button" onclick="selectFreshflowerphotography(this)">ハーフバースデイ</button>
+                <button type="button" onclick="selectFreshflowerphotography(this)">1歳バースデイ</button>
+                <button type="button" onclick="selectFreshflowerphotography(this)">2歳バースデイ</button>
+                <button type="button" onclick="selectFreshflowerphotography(this)">入園・入学</button>
+                <button type="button" onclick="selectFreshflowerphotography(this)">成人式</button>
+                <div class="info-textmemo">その他の方は以下にご記入ください</div>
+            <textarea id="mugwortmainkid" placeholder="例：山田太郎・3ヶ月・男の子など 複数いれば全員分ご記入ください。"></textarea>
+            </div>
+
         <div class="highlight-background">
-            <div class="kibounitizi">出産予定日 or 出産日<span class="required">必須</span></div>
+            <div class="kibounitizi">お子様のお誕生日（任意）</span></div>
         </div>
 
         <!-- カスタム placeholder 表示用 -->
@@ -878,50 +942,45 @@
             <input type="datetime-local" id="date4" class="datetime-input" placeholder=" " aria-label="タップして日時を入力">
         </div>
 
-            <div class="label">自然分娩 or 帝王切開</div>
-            <div class="Caesareansection-buttons">
-                <button type="button" onclick="selectCaesareansection(this)">自然分娩</button>
-                <button type="button" onclick="selectCaesareansection(this)">帝王切開</button>
-            </div>
+            <div class="label">お子様のお名前（任意）</div>
+            <textarea id="mugwortmainkid" placeholder="お子様のお名前をご記入ください。"></textarea>
 
-        <div class="label">お子様のお名前（任意）<span class="required">必須</span></div>
-        <input type="text" id="mugwortsiblinginfo" placeholder="お子様のお名前（任意）を入力してください">
-
-            <div class="label">お子様の性別<span class="required">必須</span></div>
+            <div class="label">お子様の性別（任意）</div>
             <div class="Freshflowerphotography-buttons">
-                <button type="button" onclick="selectFreshflowerphotography(this)">男</button>
-                <button type="button" onclick="selectFreshflowerphotography(this)">女</button>
-                <button type="button" onclick="selectFreshflowerphotography(this)">わからない</button>
+                <button type="button" onclick="selectFreshflowerphotography(this)">男性</button>
+                <button type="button" onclick="selectFreshflowerphotography(this)">女性</button>
             </div>
 
-            <div class="labelContent">ご兄弟情報<br>※いらっしゃらない場合は未記入で大丈夫です。（任意）</div>
-            <div class="info-text">ご兄弟のお名前</div>
-            <input type="text" id="mugwortmainkid" placeholder="ご兄弟のお名前をご記入ください">
-            <div class="info-text">ご兄弟の性別</div>
-            <div class="kimono-buttons">
-                <button type="button" onclick="selectkimono(this)">男性</button>
-                <button type="button" onclick="selectkimono(this)">女性</button>
-                <button type="button" onclick="selectkimono(this)">相談したい</button>
+            <div class="label">ご兄弟のお名前（任意）</div>
+            <textarea id="mugwortsiblinginfo" placeholder="お名前・年齢・性別をご記入ください。"></textarea>
+
+            <div class="label">ご兄弟の性別（任意）</div>
+            <div class="preparationphoto-buttons">
+                <button type="button" onclick="selectpreparationphoto(this)">男性</button>
+                <button type="button" onclick="selectpreparationphoto(this)">女性</button>
             </div>
-            <div class="info-text">ご兄弟の年齢</div>
-            <input type="tel" id="mugwortparticipants" placeholder="ご兄弟の年齢をご記入ください">
 
-            <div class="label">撮影に参加される方の人数と続柄（任意）</div>
-            <input type="text" id="mugwortshrinename" placeholder="撮影に参加される方の人数と続柄をご記入ください">
+            <div class="label">ご兄弟の年齢（任意）</div>
+            <input type="text" id="mugwortparticipants" placeholder="例：祖母2人、父、母 など">
 
-            <div class="label">生花撮影ご希望の有無（スタジオのみ）（任意）</div>
+            <div class="label">同行撮影の方はお参りされる神社名（任意）</div>
+            <input type="text" id="mugwortshrinename" placeholder="神社名をご記入ください">
+
+            <div class="label">生花撮影ご希望の有無<span class="required">必須</span></div>
+            <div class="preparationphoto-buttons">
+                <button type="button" onclick="selectpreparationphoto(this)">有り</button>
+                <button type="button" onclick="selectpreparationphoto(this)">無し</button>
+                <button type="button" onclick="selectpreparationphoto(this)">相談したい</button>
+            </div>
+
+            <div class="label">◎お支度ご希望の有無<span class="required">必須</span></div>
             <div class="hairmakeup-buttons">
                 <button type="button" onclick="selecthairmakeup(this)">有り</button>
                 <button type="button" onclick="selecthairmakeup(this)">無し</button>
                 <button type="button" onclick="selecthairmakeup(this)">相談したい</button>
             </div>
 
-            <div class="label">大人ヘアメイクご希望の有無<span class="required">必須</span></div>
-            <div class="preparationphoto-buttons">
-                <button type="button" onclick="selectpreparationphoto(this)">有り</button>
-                <button type="button" onclick="selectpreparationphoto(this)">無し</button>
-                <button type="button" onclick="selectpreparationphoto(this)">相談したい</button>
-            </div>
+
         
         <div class="highlight-background">
             <div class="kibounitizi">希望日時<span class="required">必須</span></div>
@@ -964,7 +1023,6 @@
         let visitCount = '';
         let hairmakeupCount = '';
         let kimonoCount = '';
-        let CaesareansectionCount = '';
         let preparationphotoCount = '';
         let FreshflowerphotographyCount = '';
         let selectedMenu = '';
@@ -1398,21 +1456,6 @@ function selectkimono(element) {
 }
 
 // 訪問回数の選択（初回・リピート）
-function selectCaesareansection(element) {
-    document.querySelectorAll('.Caesareansection-buttons button').forEach(btn => btn.classList.remove('active'));
-    element.classList.add('active');
-    CaesareansectionCount = element.innerText;
-
-    // 選択された訪問回数に対応する時間を取得
-    selectedCaesareansectionTime = CaesareansectionTimes[CaesareansectionCount];
-
-    console.log('選択された訪問回数の時間:', selectedCaesareansectionTime);
-
-    // カレンダーを更新するために取得する日付を渡す
-    fetchAvailability(currentDate);
-}
-
-// 訪問回数の選択（初回・リピート）
 function selectpreparationphoto(element) {
     document.querySelectorAll('.preparationphoto-buttons button').forEach(btn => btn.classList.remove('active'));
     element.classList.add('active');
@@ -1512,6 +1555,7 @@ function selectpreparationphoto(element) {
             selectedFullDate = `${date.getFullYear()}年${('0' + (date.getMonth() + 1)).slice(-2)}月${('0' + date.getDate()).slice(-2)}日 ${selectedTime}`;
 
             // 希望日時を即座に更新
+            updateDisplayInfo();
         }
 
         function submitForm() {
@@ -1522,12 +1566,12 @@ function selectpreparationphoto(element) {
         mugwortsiblinginfo: document.getElementById('mugwortsiblinginfo').value.trim(),
         mugwortparticipants: document.getElementById('mugwortparticipants').value.trim(),
         mugwortshrinename: document.getElementById('mugwortshrinename').value.trim(),
-        visitCount, hairmakeupCount, kimonoCount, preparationphotoCount, FreshflowerphotographyCount, CaesareansectionCount,
+        mugwortreservationtime: document.getElementById('mugwortreservationtime').value.trim(),
+        visitCount, hairmakeupCount, kimonoCount, preparationphotoCount, FreshflowerphotographyCount,
                 dates: [
                     document.getElementById('date1').value,
                     document.getElementById('date2').value,
-                    document.getElementById('date3').value,
-                    document.getElementById('date4').value
+                    document.getElementById('date3').value
                 ],
         message: document.getElementById('message').value.trim()
       };
@@ -1551,7 +1595,7 @@ function selectpreparationphoto(element) {
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前\n・${formData.name}\n\n電話番号\n・${formData.phone}\n\nプラン\n・${formData.visitCount}\n\n出産予定日\n・${formatDate(formData.dates[3])}\n\n自然分娩 or 帝王切開\n・${formData.CaesareansectionCount}\n\nお子様のお名前\n・${formData.mugwortsiblinginfo}\n\nお子様の性別\n・${formData.FreshflowerphotographyCount}\n\nご兄弟のお名前\n・${formData.mugwortmainkid}\n\nご兄弟の性別\n・${formData.kimonoCount}\n\nご兄弟の年齢\n・${formData.mugwortparticipants}\n\n撮影に参加される方\n・${formData.mugwortshrinename}\n\n生花撮影\n・${formData.hairmakeupCount}\n\n大人ヘアメイク\n・${formData.preparationphotoCount}\n\n【希望日時】：\n・第一希望日\n${formatDate(formData.dates[0])}\n\n・第二希望日\n${formatDate(formData.dates[1])}\n\n・第三希望日\n${formatDate(formData.dates[2])}\n\nメッセージ：${formData.message}`
+                text: `【予約フォーム】\nお名前\n・${formData.name}\n\n電話番号\n・${formData.phone}\n\nプラン\n・${formData.visitCount}\n\n祈祷されるお子様\n・${formData.mugwortmainkid}\n\n付き添いご兄弟\n・${formData.mugwortsiblinginfo}\n\n撮影に参加される方\n・${formData.mugwortparticipants}\n\n同行撮影\n・${formData.mugwortshrinename}\n\nご祈祷の予約時間\n・${formData.mugwortreservationtime}\n\n生花撮影\n・${formData.FreshflowerphotographyCount}\n\nお支度風景\n・${formData.preparationphotoCount}\n\n着物レンタル\n・${formData.kimonoCount}\n\nお支度ご希望\n・${formData.hairmakeupCount}\n\n【希望日時】：\n・第一希望日\n${formatDate(formData.dates[0])}\n\n・第二希望日\n${formatDate(formData.dates[1])}\n\n・第三希望日\n${formatDate(formData.dates[2])}\n\nメッセージ：${formData.message}`
             }]).then(() => {
                 alert('当日キャンセルは無いようにお願いいたします。');
                 liff.closeWindow();
