--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
         }
 
         .visit-buttons,
+        .Caesareansection-buttons,
         .hairmakeup-buttons,
         .kimono-buttons,
         .preparationphoto-buttons,
@@ -200,6 +201,7 @@
         }
 
         .visit-buttons button,
+        .Caesareansection-buttons button,
         .hairmakeup-buttons button,
         .kimono-buttons button,
         .preparationphoto-buttons button,
@@ -220,6 +222,7 @@
         }
 
         .visit-buttons button.active,
+        .Caesareansection-buttons button.active,
         .hairmakeup-buttons button.active,
         .kimono-buttons button.active,
         .preparationphoto-buttons button.active,
@@ -955,22 +958,22 @@
             <textarea id="mugwortsiblinginfo" placeholder="お名前・年齢・性別をご記入ください。"></textarea>
 
             <div class="label">ご兄弟の性別（任意）</div>
-            <div class="preparationphoto-buttons">
-                <button type="button" onclick="selectpreparationphoto(this)">男性</button>
-                <button type="button" onclick="selectpreparationphoto(this)">女性</button>
+            <div class="Caesareansection-buttons">
+                <button type="button" onclick="selectCaesareansection(this)">男性</button>
+                <button type="button" onclick="selectCaesareansection(this)">女性</button>
             </div>
 
             <div class="label">ご兄弟の年齢（任意）</div>
             <input type="text" id="mugwortparticipants" placeholder="例：祖母2人、父、母 など">
 
-            <div class="label">同行撮影の方はお参りされる神社名（任意）</div>
-            <input type="text" id="mugwortshrinename" placeholder="神社名をご記入ください">
+            <div class="label">撮影に参加される方の人数と続柄（任意）</div>
+            <input type="text" id="mugwortshrinename" placeholder="撮影に参加される方の人数と続柄をご記入ください">
 
             <div class="label">生花撮影ご希望の有無<span class="required">必須</span></div>
-            <div class="preparationphoto-buttons">
-                <button type="button" onclick="selectpreparationphoto(this)">有り</button>
-                <button type="button" onclick="selectpreparationphoto(this)">無し</button>
-                <button type="button" onclick="selectpreparationphoto(this)">相談したい</button>
+            <div class="kimono-buttons">
+                <button type="button" onclick="selectkimono(this)">有り</button>
+                <button type="button" onclick="selectkimono(this)">無し</button>
+                <button type="button" onclick="selectkimono(this)">相談したい</button>
             </div>
 
             <div class="label">◎お支度ご希望の有無<span class="required">必須</span></div>
@@ -1026,6 +1029,7 @@
         let preparationphotoCount = '';
         let FreshflowerphotographyCount = '';
         let selectedMenu = '';
+        let CaesareansectionCount = '';
         let highschoolCount = '';
         let selectedSymptom = [];  // 配列として定義
         let selectedFullDate = '';
@@ -1456,6 +1460,21 @@ function selectkimono(element) {
 }
 
 // 訪問回数の選択（初回・リピート）
+function selectCaesareansection(element) {
+    document.querySelectorAll('.Caesareansection-buttons button').forEach(btn => btn.classList.remove('active'));
+    element.classList.add('active');
+    CaesareansectionCount = element.innerText;
+
+    // 選択された訪問回数に対応する時間を取得
+    selectedCaesareansectionTime = CaesareansectionTimes[CaesareansectionCount];
+
+    console.log('選択された訪問回数の時間:', selectedCaesareansectionTime);
+
+    // カレンダーを更新するために取得する日付を渡す
+    fetchAvailability(currentDate);
+}
+
+// 訪問回数の選択（初回・リピート）
 function selectpreparationphoto(element) {
     document.querySelectorAll('.preparationphoto-buttons button').forEach(btn => btn.classList.remove('active'));
     element.classList.add('active');
@@ -1567,11 +1586,12 @@ function selectpreparationphoto(element) {
         mugwortparticipants: document.getElementById('mugwortparticipants').value.trim(),
         mugwortshrinename: document.getElementById('mugwortshrinename').value.trim(),
         mugwortreservationtime: document.getElementById('mugwortreservationtime').value.trim(),
-        visitCount, hairmakeupCount, kimonoCount, preparationphotoCount, FreshflowerphotographyCount,
+        visitCount, hairmakeupCount, kimonoCount, preparationphotoCount, FreshflowerphotographyCount, CaesareansectionCount,
                 dates: [
                     document.getElementById('date1').value,
                     document.getElementById('date2').value,
-                    document.getElementById('date3').value
+                    document.getElementById('date3').value,
+                    document.getElementById('date4').value
                 ],
         message: document.getElementById('message').value.trim()
       };
@@ -1595,7 +1615,7 @@ function selectpreparationphoto(element) {
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前\n・${formData.name}\n\n電話番号\n・${formData.phone}\n\nプラン\n・${formData.visitCount}\n\n祈祷されるお子様\n・${formData.mugwortmainkid}\n\n付き添いご兄弟\n・${formData.mugwortsiblinginfo}\n\n撮影に参加される方\n・${formData.mugwortparticipants}\n\n同行撮影\n・${formData.mugwortshrinename}\n\nご祈祷の予約時間\n・${formData.mugwortreservationtime}\n\n生花撮影\n・${formData.FreshflowerphotographyCount}\n\nお支度風景\n・${formData.preparationphotoCount}\n\n着物レンタル\n・${formData.kimonoCount}\n\nお支度ご希望\n・${formData.hairmakeupCount}\n\n【希望日時】：\n・第一希望日\n${formatDate(formData.dates[0])}\n\n・第二希望日\n${formatDate(formData.dates[1])}\n\n・第三希望日\n${formatDate(formData.dates[2])}\n\nメッセージ：${formData.message}`
+                text: `【予約フォーム】\nお名前\n・${formData.name}\n\n電話番号\n・${formData.phone}\n\nプラン\n・${formData.visitCount}\n\n撮影内容\n・${formData.Freshflowerphotography}\n\nお子様のお誕生日\n・${formatDate(formData.dates[3])}\n\nお子様のお名前\n・${formData.mugwortmainkid}\n\nお子様の性別\n・${formData.FreshflowerphotographyCount}\n\nご兄弟のお名前\n・${formData.mugwortsiblinginfo}\n\nご兄弟の性別\n・${formData.CaesareansectionCount}\n\nご兄弟の年齢\n・${formData.mugwortparticipants}\n\n撮影に参加される方\n・${formData.mugwortshrinename}\n\n生花撮影\n・${formData.kimonoCount}\n\nお支度\n・${formData.hairmakeupCount}\n\n【希望日時】：\n・第一希望日\n${formatDate(formData.dates[0])}\n\n・第二希望日\n${formatDate(formData.dates[1])}\n\n・第三希望日\n${formatDate(formData.dates[2])}\n\nメッセージ：${formData.message}`
             }]).then(() => {
                 alert('当日キャンセルは無いようにお願いいたします。');
                 liff.closeWindow();
