--- a/index.html
+++ b/index.html
@@ -932,7 +932,7 @@
                 <button type="button" onclick="selectFreshflowerphotography(this)">入園・入学</button>
                 <button type="button" onclick="selectFreshflowerphotography(this)">成人式</button>
                 <div class="info-textmemo">その他の方は以下にご記入ください</div>
-            <textarea id="mugwortmainkid" placeholder="例：山田太郎・3ヶ月・男の子など 複数いれば全員分ご記入ください。"></textarea>
+            <textarea id="ziyuusonota" placeholder="例：山田太郎・3ヶ月・男の子など 複数いれば全員分ご記入ください。"></textarea>
             </div>
 
         <div class="highlight-background">
@@ -1582,10 +1582,10 @@ function selectpreparationphoto(element) {
         name: document.getElementById('name').value.trim(),
         phone: document.getElementById('phone').value.trim(),
         mugwortmainkid: document.getElementById('mugwortmainkid').value.trim(),
+        ziyuusonota: document.getElementById('ziyuusonota').value.trim(),
         mugwortsiblinginfo: document.getElementById('mugwortsiblinginfo').value.trim(),
         mugwortparticipants: document.getElementById('mugwortparticipants').value.trim(),
         mugwortshrinename: document.getElementById('mugwortshrinename').value.trim(),
-        mugwortreservationtime: document.getElementById('mugwortreservationtime').value.trim(),
         visitCount, hairmakeupCount, kimonoCount, preparationphotoCount, FreshflowerphotographyCount, CaesareansectionCount,
                 dates: [
                     document.getElementById('date1').value,
@@ -1615,7 +1615,7 @@ function selectpreparationphoto(element) {
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前\n・${formData.name}\n\n電話番号\n・${formData.phone}\n\nプラン\n・${formData.visitCount}\n\n撮影内容\n・${formData.Freshflowerphotography}\n\nお子様のお誕生日\n・${formatDate(formData.dates[3])}\n\nお子様のお名前\n・${formData.mugwortmainkid}\n\nお子様の性別\n・${formData.FreshflowerphotographyCount}\n\nご兄弟のお名前\n・${formData.mugwortsiblinginfo}\n\nご兄弟の性別\n・${formData.CaesareansectionCount}\n\nご兄弟の年齢\n・${formData.mugwortparticipants}\n\n撮影に参加される方\n・${formData.mugwortshrinename}\n\n生花撮影\n・${formData.kimonoCount}\n\nお支度\n・${formData.hairmakeupCount}\n\n【希望日時】：\n・第一希望日\n${formatDate(formData.dates[0])}\n\n・第二希望日\n${formatDate(formData.dates[1])}\n\n・第三希望日\n${formatDate(formData.dates[2])}\n\nメッセージ：${formData.message}`
+                text: `【予約フォーム】\nお名前\n・${formData.name}\n\n電話番号\n・${formData.phone}\n\nプラン\n・${formData.visitCount}\n\n撮影内容\n・${formData.Freshflowerphotography}${formData.ziyuusonota}\n\nお子様のお誕生日\n・${formatDate(formData.dates[3])}\n\nお子様のお名前\n・${formData.mugwortmainkid}\n\nお子様の性別\n・${formData.FreshflowerphotographyCount}\n\nご兄弟のお名前\n・${formData.mugwortsiblinginfo}\n\nご兄弟の性別\n・${formData.CaesareansectionCount}\n\nご兄弟の年齢\n・${formData.mugwortparticipants}\n\n撮影に参加される方\n・${formData.mugwortshrinename}\n\n生花撮影\n・${formData.kimonoCount}\n\nお支度\n・${formData.hairmakeupCount}\n\n【希望日時】：\n・第一希望日\n${formatDate(formData.dates[0])}\n\n・第二希望日\n${formatDate(formData.dates[1])}\n\n・第三希望日\n${formatDate(formData.dates[2])}\n\nメッセージ：${formData.message}`
             }]).then(() => {
                 alert('当日キャンセルは無いようにお願いいたします。');
                 liff.closeWindow();
